Added isotope library to animate portfolio section with tabs

--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
     <div class="container">
       <h2 class="section__title">Latest Works</h2>
       <ul class="works-menu">
-        <li class="works-menu__item"><a href="#" class="works-menu__link works-menu__link_active">All</a></li>
-        <li class="works-menu__item"><a href="#" class="works-menu__link">Branding</a></li>
-        <li class="works-menu__item"><a href="#" class="works-menu__link">Design</a></li>
-        <li class="works-menu__item"><a href="#" class="works-menu__link">Development</a></li>
-        <li class="works-menu__item"><a href="#" class="works-menu__link">Strategy</a></li>
+        <li class="works-menu__item"><button class="works-menu__button works-menu__button_active" data-filter="*">All</button></li>
+        <li class="works-menu__item"><button class="works-menu__button" data-filter=".branding">Branding</button></li>
+        <li class="works-menu__item"><button class="works-menu__button" data-filter=".design">Design</button></li>
+        <li class="works-menu__item"><button class="works-menu__button" data-filter=".development">Development</button></li>
+        <li class="works-menu__item"><button class="works-menu__button" data-filter=".strategy">Strategy</button></li>
       </ul>
       <div class="works-block">
-        <div class="works-item">
+        <div class="works-item branding">
           <img src="img/works/work-1.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -161,7 +161,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item development">
           <img src="img/works/work-2.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -169,7 +169,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item branding">
           <img src="img/works/work-3.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -177,7 +177,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item design">
           <img src="img/works/work-4.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -185,7 +185,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item development">
           <img src="img/works/work-5.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -193,7 +193,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item design">
           <img src="img/works/work-6.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -201,7 +201,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item design">
           <img src="img/works/work-7.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -209,7 +209,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item strategy">
           <img src="img/works/work-8.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -217,7 +217,7 @@
             <a href="" class="button button_view">View <i class="button_triagle fas fa-angle-right"></i></a>
           </div>
         </div>
-        <div class="works-item">
+        <div class="works-item strategy">
           <img src="img/works/work-9.png" alt="Work" class="works-item__img">
           <div class="works-hover">
             <div class="works-hover__title">Hair Dresser</div>
@@ -366,6 +366,14 @@
       <div class="author">© 2015 Startup, Designed by ShapedTheme</div>
     </div>
   </footer>
+
+  <!-- Scripts -->
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <!-- isotope -->
+  <script src="js/isotope.min.js"></script>
+  <!-- main -->
+  <script src="js/main.js"></script>
 </body>
 
 </html>
